--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,7 @@
-
+cloud:
+    compatibility-verifier:
+      enabled: false
+  boot:
+    admin:
+      client:
+        url: http://localhost:1111/   
